hphp/hack/test/typecheck/references/binding_superglobals.php.exp
File "binding_superglobals.php", line 5, characters 12-12:
An expression is expected here. (Parsing[1002])
